<resources>
    <string name="app_name">DiscoverFood</string>
    <string name="title_activity_login">Sign in</string>
    <string name="menu">Menu</string>
    <string name="restaurantes">Ver restaurantes</string>
    <string name="pedidos">Ver Pedidos</string>
    <string name="repartidores">Acceso repartidores</string>
    <string name="contacto">Contacto</string>
    <string name="contactoc">Contacto cliente</string>
    <string name="info">Información de la Aplicación</string>
    <string name="logo">Logo</string>
    <string name="volver">Volver al inicio</string>
    <string name="autor">Aplicación creada por: Luis Fernando Uribe</string>
    <string name="email">Email: luis.uribeb@upb.edu.co</string>

    <!-- Strings related to menu -->
    <string name="nombre">Nombre:</string>
    <string name="ingresarn">Ingrese su nombre</string>
    <string name="telefono">Telefono:</string>
    <string name="ingresart">Ingrese su telefono</string>
    <string name="continuar">Continuar</string>
    <string name="direccion">Usar mi ubicación actual</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to plato -->
    <string name="plato">Plato</string>

    <!-- Strings related to repartidor -->
    <string name="nopedido">No hay pedidos disponibles</string>
    <string name="mapa">Ver mapa</string>
    <string name="infopedido">Información pedido</string>
    <string name="infocliente">Información cliente</string>

</resources>
