<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Menu.ClienteActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="314dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/etn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="308dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/telefono"
        app:layout_constraintBottom_toTopOf="@+id/ett"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etn" />

    <EditText
        android:id="@+id/ett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/ingresart"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/ingresarn"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnc"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ett" />
</android.support.constraint.ConstraintLayout>